# telegram-stock-digest-bot

./: .env.example  .gitignore  README.md  catch-up-dry-run.cmd  catch-up.cmd  collect.cmd  config.example.toml  pyproject.toml  run-dry-run.cmd  test.cmd
src/tg_portfolio_bot/: __init__.py  classifier.py  cli.py  collector.py  config.py  digest.py  llm.py  models.py  periods.py  sender.py  storage.py
tests/: test_classifier.py  test_digest.py  test_periods.py  test_storage.py
