[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-portfolio-news-bot"
version = "0.1.0"
description = "Local Telegram portfolio news collector and digest sender."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "telethon>=1.34.0",
  "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.scripts]
tg-portfolio-bot = "tg_portfolio_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
